# victorouse.github.io

./: .gitignore  .nojekyll  404.html  404.qmd  CNAME  _quarto.yml  about.html  about.qmd  first.html  first.qmd  header.tex  hello.html  hello.qmd  index.css  index.html  index.qmd  index.xml  listings.json  pyproject.toml  resume.css  resume.html  resume.qmd  resume.tex  robots.txt  search.json  sitemap.xml  styles.scss
.github/workflows/: publish.yml
_extensions/mcanouil/animate/: animate.min.css
_extensions/victorouse/zip_title/: _extension.yml  zip_title.lua
_freeze/cv/execute-results/: tex.json
_freeze/first/execute-results/: html.json
_freeze/resume/execute-results/: html.json  pdf.json  tex.json
blog/: first.html  first.qmd  index.html  index.qmd  index.xml  second.html  second.qmd  third.html  third.qmd
blog/exploring-llms/: 1-introduction-to-llms.html  1-introduction-to-llms.qmd  index.html  index.qmd  index.xml
blog/third/: index.html  index.qmd  notebook-preview.html  notebook.html  notebook.ipynb  notebook.out.ipynb
posts/: first.html  first.qmd  second.html  second.qmd
renv/: activate.R
resume/: index.html  index.qmd  resume.css
site_libs/bootstrap/: bootstrap-082569c7aab4b4d249ab3c8978e0f831.min.css  bootstrap-4d95854a9a6d5cbb828d4d4d1387c423.min.css  bootstrap-c295b819f013a7930191a31dbc82c127.min.css  bootstrap-dark.min.css  bootstrap.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-348f199be7463c2806c70b2ed5b54078.css  quarto-syntax-highlighting-7aae30fe7b816a180816de4e5ec9bdf3.css  quarto-syntax-highlighting.css
(+21 files in other folders)
