[tool.poetry]
name = "victorouse"
version = "0.1.0"
description = ""
authors = ["Victor Roussekov <victorouse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
pytinytex = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
